# precursor

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  HARDWARE_ACCELERATION.md  README.md  RELEASE-CHECKLIST.md  ROADMAP.md  SIGMA_INTEGRATION.md  SIMILARITY_BACKENDS.md  STATS.md  architecture.puml  build.rs
.github/: dependabot.yml
.github/workflows/: auto-bump-version.yml  auto-tag-release.yml  ci.yml  pages.yml  release.yml
ai/: LLM_DISCOVERY_LOOP.md  MEMORY.md  PROMPT_STRATEGY.md  REPO_REVIEW.md
benchmarks/: README.md  baseline-2026-02-13.md  latest.md
ci/: benchmark_scenarios.sh  build_mrshv2_mock.sh  bump_patch_version.sh  generate_cli_assets.sh
ffi/: README.md  mrshv2_adapter.h  mrshv2_mock.c
samples/scenarios/: README.md  run_all.sh
samples/scenarios/firmware-fragment-triage/: patterns.pcre  payloads.hex
samples/scenarios/ics-modbus-single-packet/: patterns.pcre  payloads.hex
site/: CNAME  DEPLOY.md  app.js  index.html  styles.css
site/data/: README.md  firmware_triage.ndjson  firmware_triage.stderr  llm_codex_demo.json  llm_demo_prompt.txt  log4shell_triage.ndjson  log4shell_triage.stderr  loop_step1.stderr  loop_step2.stderr  loop_step4_codex.stderr  packet_triage.ndjson  packet_triage.stderr  sigma_triage.ndjson  sigma_triage.stderr
skills/precursor-maintainer/: SKILL.md
skills/precursor-pattern-lab/: SKILL.md
src/: main.rs
src/precursor/: fbhash.rs  inference.rs  lzjd.rs  mod.rs  mrshv2.rs  regex_engine.rs  sigma.rs  similarity.rs  tlsh.rs  util.rs
tests/: cli_contract.rs  scenario_corpus_contract.rs
(+27 files in other folders)
