[package]
name = "precursor"
build = "build.rs"
version = "0.2.2"
edition = "2021"
rust-version = "1.86"
authors = ["Matt Lehman <obsecurus@users.noreply.github.com>"]
homepage = "https://precursor.hashdb.io"
repository = "https://github.com/Obsecurus/precursor"
documentation = "https://github.com/Obsecurus/precursor#readme"
description = "Pre-protocol payload tagging, similarity clustering, and packet/firmware triage CLI."
readme = "README.md"
keywords = ["ids", "forensics", "similarity", "packet", "firmware"]
license = "MIT OR Unlicense"
categories = ["command-line-utilities", "filesystem", "datascience"]
exclude = [
  ".env",
  ".env.*",
  ".DS_Store",
  "samples/.DS_Store",
  "README_files/*",
]

[features]
default = []
similarity-mrshv2 = []

[dependencies]
xxhash-rust = { version = "0.8.0", features = ["xxh3", "const_xxh3"] }
clap = "4.4.6"
pcre2 = "0.2.5"
serde_json = { version = "1.0.107", features = ["preserve_order"] }
tlsh2 = { version = "0.3.0", features = ["diff"] }
hex = "0.4.3"
lazy_static = "1.4.0"
base64 = "0.21.4"
rayon = "1.8.0"
dashmap = "5.5.3"
atomic-counter = "1.0.1"
sha2 = "0.10.8"
jaq-core = "0.10.0"
indicatif = "0.17.7"

[[bin]]
name = "precursor"
path = "src/main.rs"

[profile.release]
debug = false
